# ucrashreport-server

./: .gitignore  Cargo.toml  README.md  config.example.toml
crates/ucrs-common/: Cargo.toml
crates/ucrs-common/src/: buildid.rs  config.rs  lib.rs  signature.rs  types.rs  usign.rs
crates/ucrs-decoder/: Cargo.toml
crates/ucrs-decoder/src/: decode.rs  lib.rs  main.rs  payload.rs  scrub.rs  symbols.rs
crates/ucrs-decoder/tests/: decode_e2e.rs
crates/ucrs-server/: Cargo.toml
crates/ucrs-server/src/: api.rs  auth.rs  main.rs  web.rs
crates/ucrs-server/templates/: base.html  group.html  groups.html  login.html  my.html  public_report.html  report.html
deploy/: Containerfile  config.compose.toml  docker-compose.yml
docs/: phase1-plan.md  protocol.md  roadmap.md
migrations/: 0001_init.sql  0002_dev_sessions.sql  0003_kernel_buildid.sql
