[package]
name = "ucrs-decoder"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
ucrs-common = { path = "../ucrs-common" }

addr2line.workspace = true
anyhow.workspace = true
flate2.workspace = true
hex.workspace = true
object.workspace = true
regex.workspace = true
reqwest.workspace = true
sha2.workspace = true
sqlx.workspace = true
tar.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
zstd.workspace = true

[dev-dependencies]
tempfile.workspace = true
