[package]
name = "ucrs-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
ucrs-common = { path = "../ucrs-common" }

anyhow.workspace = true
axum.workspace = true
base64.workspace = true
futures-util.workspace = true
hex.workspace = true
multer.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
